--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,3 +1,12 @@
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+@mixin flex($direction) {
+  display: flex;
+  flex-direction: $direction;
+}
+
+.container {
+  @include flex(column)
+}
