--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,11 +1,6 @@
-body {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-@mixin flex($direction) {
-  display: flex;
-  flex-direction: $direction;
-}
+@import "mixins.scss";
+@import "colors.scss";
+@import "global.scss";
 
 .container {
   @include flex(column)
